# moab_simd_bvh

./: .gitignore  AABB.h  CMakeLists.txt  Intersector.cpp  Intersector.h  MBVHConfig.cmake.in  Node.h  README.md  Ray.h  Stack.h  Traverser.h  Vec3.h  constants.h  vbool.h  vfloat.h
cmake/: CodeCoverage.cmake  FindMBVH.cmake
common/: program_stats.hpp  rayutil.hpp
src/: #Builder.h#  .#Builder.h  AABB.h  BVH.h  BVHRefiner.h  BVHSettings.h  BVHStats.h  BaseVisitor.hpp  BuildPrimitiveBVH.h  BuildState.h  Builder.h  CMakeLists.txt  FilterFunc.h  Intersector.cpp  Intersector.h  MBVH.h  MBVH.h.in  MBVHManager.cpp  MBVHManager.h  MOABDirectAccessManager.h  MixedBVH.h  Node.h  OBB.h  OBVH.h  Primitive.h  PrimitiveReference.h  Ray.h  SetRef.h  Stack.h  TempNode.h  TraversalClass.cpp  TraversalClass.hpp  TraversalVisitor.hpp  Traverser.h  TriangleBVH.h  TriangleIntersectors.h  TriangleRef.h  Vec3.h  Vec3ba.h  Vec3da.h  (+13 more)
tests/: CMakeLists.txt  test_MBVH.cpp  test_OBVH.cpp  test_aabb.cpp  test_affine.cpp  test_builder.cpp  test_buildrecord.cpp  test_buildset.cpp  test_buildsettings.cpp  test_closest_to_location.cpp  test_distant_rays.cpp  test_files.h.in  test_filter_funcs.cpp  test_intersect.cpp  test_manager.cpp  test_mat3.cpp  test_mesh.hpp  test_moab_mesh.cpp  test_moab_mesh.cpp.in  test_moab_old.cpp  test_moab_robust.cpp  test_obb.cpp  test_obb_sphere.cpp  test_ray.cpp  test_space.cpp  test_stack.cpp  test_traverse.cpp  test_uanode.cpp  test_vbool.cpp  test_vec.cpp  test_vec3da.cpp  test_vec3f.cpp  test_vec3fa.cpp  test_vec3vfa.cpp  test_vfloat.cpp  testutil.hpp
tests/test_files/: 3k-tri-cube.h5m  CMakeLists.txt
tools/: BaseVisitor.hpp  CMakeLists.txt  WriteVisitor.hpp  hexwriter.cpp  leafwriter.cpp  performance_report.cpp  rand_ray_gen.cpp  ray_fire.cpp  travwriter.cpp  validator.cpp
