PROJECT(MOAB_SIMD_BVH)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(src)

SET(SRC_FILES)
LIST(APPEND SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Intersector.cpp)

SET(HEADERS)
LIST(APPEND HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/src/testutil.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3f.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AABB.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Ray.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Node.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/constants.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ops.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Traverser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Stack.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Intersector.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Builder.h)

# Code Coverage
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
#INCLUDE(UseBackportedModules)

LIST(APPEND TEST_FILES "vec3f")
LIST(APPEND TEST_FILES "aabb")
LIST(APPEND TEST_FILES "ray")
LIST(APPEND TEST_FILES "intersect")
LIST(APPEND TEST_FILES "vfloat")
LIST(APPEND TEST_FILES "vbool")
LIST(APPEND TEST_FILES "traverse")
LIST(APPEND TEST_FILES "builder")
LIST(APPEND TEST_FILES "buildrecord")
LIST(APPEND TEST_FILES "buildset")

ADD_SUBDIRECTORY(tests)


set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
IF(CMAKE_COMPILER_IS_GNUCXX)
  include(CodeCoverage)
  FOREACH(TEST_NAME IN LISTS TEST_FILES)
    ADD_TEST(NAME ${TEST_NAME}_test COMMAND test_${TEST_NAME})
    setup_target_for_coverage( NAME test_${TEST_NAME}_coverage EXECUTABLE test_${TEST_NAME} )
    LIST(APPEND TEST_NAMES test_${TEST_NAME}_coverage)
    LIST(APPEND LCOV_MERGE_NAMES -a test_${TEST_NAME}_coverage.info)
  ENDFOREACH()
ENDIF()

IF(CMAKE_BUILD_TYPE STREQUAL "Coverage")
  ADD_CUSTOM_TARGET(test_coverage DEPENDS ${TEST_NAMES})
ADD_CUSTOM_COMMAND(
  TARGET
    test_coverage
  COMMAND
    ${LCOV_PATH} ${LCOV_MERGE_NAMES} --output test_coverage.info
  COMMAND
    ${GENHTML_PATH} test_coverage.info -o test_coverage
  VERBATIM
  )
ENDIF()

ENABLE_TESTING()


