PROJECT(MOAB_SIMD_BVH)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Allow use of find_package(HDF5), find_package(MOAB), etc.
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(MOAB REQUIRED)

SET(SRC_FILES)
LIST(APPEND SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Intersector.cpp)

SET(HEADERS)
LIST(APPEND HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/src/testutil.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3f.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3fa.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3da.h  
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AABB.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Ray.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Node.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/constants.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ops.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Traverser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Stack.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Intersector.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Builder.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/TriangleRef.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SetRef.h  
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MBVH.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BVHStats.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BVHSettings.h)



# Code Coverage
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
#INCLUDE(UseBackportedModules)

SET(INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(TEST_DIR ${CMAKE_INSTALL_PREFIX}/tests)

# make test file location global
SET(TEST_FILES_DIR CACHE INTERNAL "Test File Location" FORCE)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)

LIST(APPEND TEST_FILES "vec3f")
LIST(APPEND TEST_FILES "vec3fa")
LIST(APPEND TEST_FILES "vec3da")
LIST(APPEND TEST_FILES "aabb")
LIST(APPEND TEST_FILES "ray")
LIST(APPEND TEST_FILES "intersect")
LIST(APPEND TEST_FILES "vfloat")
LIST(APPEND TEST_FILES "vbool")
LIST(APPEND TEST_FILES "traverse")
LIST(APPEND TEST_FILES "builder")
LIST(APPEND TEST_FILES "buildrecord")
LIST(APPEND TEST_FILES "buildset")
LIST(APPEND TEST_FILES "stack")
LIST(APPEND TEST_FILES "manager")
LIST(APPEND TEST_FILES "buildsettings")
LIST(APPEND TEST_FILES "moab_mesh")
LIST(APPEND TEST_FILES "moab_old")
LIST(APPEND TEST_FILES "MBVH")

ADD_SUBDIRECTORY(tests)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
IF(CMAKE_COMPILER_IS_GNUCXX)
  include(CodeCoverage)
  FOREACH(TEST_NAME IN LISTS TEST_FILES)
    ADD_TEST(NAME ${TEST_NAME}_test COMMAND test_${TEST_NAME})
    setup_target_for_coverage( NAME test_${TEST_NAME}_coverage EXECUTABLE test_${TEST_NAME} )
    LIST(APPEND TEST_NAMES test_${TEST_NAME}_coverage)
    LIST(APPEND LCOV_MERGE_NAMES -a test_${TEST_NAME}_coverage.info)
  ENDFOREACH()
ENDIF()

#setup_target_for_coverage( NAME test_moab_mesh_coverage EXECUTABLE test_moab_mesh )
#LIST(APPEND TEST_NAMES test_moab_mesh_coverage)
#LIST(APPEND LCOV_MERGE_NAMES -a test_moab_mesh_coverage.info)

IF(CMAKE_BUILD_TYPE STREQUAL "Coverage")
  ADD_CUSTOM_TARGET(test_coverage DEPENDS ${TEST_NAMES})
ADD_CUSTOM_COMMAND(
  TARGET
    test_coverage
  COMMAND
    ${LCOV_PATH} ${LCOV_MERGE_NAMES} --output test_coverage.info
  COMMAND
    ${GENHTML_PATH} test_coverage.info -o test_coverage
  VERBATIM
  )
ENDIF()

ENABLE_TESTING()


