PROJECT(MOAB_SIMD_BVH C CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES("/usr/include/eigen3")


OPTION(TEST_COVERAGE "Enable test coverage reporting" OFF)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Default build is release" FORCE)
ENDIF()

IF(TEST_COVERAGE)
  SET(CMAKE_BUILD_TYPE "Coverage" CACHE STRING "Coverage" FORCE)
ENDIF()

# Allow use of find_package(HDF5), find_package(MOAB), etc.
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)
SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fPIC -march=native -mavx2")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -march=native -mavx2")

FIND_PACKAGE(MOAB REQUIRED)

SET(SRC_FILES)
LIST(APPEND SRC_FILES)

SET(HEADERS)
FILE(GLOB HEADERS ./src/*.h)
# Code Coverage
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
#INCLUDE(UseBackportedModules)

SET(INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(TOOLS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/tools)
SET(TEST_DIR ${CMAKE_INSTALL_PREFIX}/tests)

# make test file location global
SET(TEST_FILES_DIR CACHE INTERNAL "Test File Location" FORCE)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS})

# A list of all unittests
# test files are named test_<test_name>
LIST(APPEND TEST_FILES "vec3f")
LIST(APPEND TEST_FILES "vec3fa")
LIST(APPEND TEST_FILES "vec3da")
LIST(APPEND TEST_FILES "mat3")
LIST(APPEND TEST_FILES "aabb")
LIST(APPEND TEST_FILES "space")
LIST(APPEND TEST_FILES "obb")
LIST(APPEND TEST_FILES "ray")
LIST(APPEND TEST_FILES "intersect")
LIST(APPEND TEST_FILES "vfloat")
LIST(APPEND TEST_FILES "vbool")
LIST(APPEND TEST_FILES "traverse")
LIST(APPEND TEST_FILES "builder")
LIST(APPEND TEST_FILES "buildrecord")
LIST(APPEND TEST_FILES "buildset")
LIST(APPEND TEST_FILES "stack")
LIST(APPEND TEST_FILES "manager")
LIST(APPEND TEST_FILES "buildsettings")
LIST(APPEND TEST_FILES "distant_rays")
LIST(APPEND TEST_FILES "filter_funcs")
LIST(APPEND TEST_FILES "closest_to_location")
LIST(APPEND TEST_FILES "moab_mesh")
LIST(APPEND TEST_FILES "moab_old")
LIST(APPEND TEST_FILES "MBVH")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(tests)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

#setup_target_for_coverage( NAME test_moab_mesh_coverage EXECUTABLE test_moab_mesh )
#LIST(APPEND TEST_NAMES test_moab_mesh_coverage)
#LIST(APPEND LCOV_MERGE_NAMES -a test_moab_mesh_coverage.info)

ENABLE_TESTING()

ADD_LIBRARY(MBVH SHARED ${HEADERS} ${CMAKE_SOURCE_DIR}/src/MBVHManager.cpp)
SET_TARGET_PROPERTIES(MBVH PROPERTIES LINKER_LANGUAGE CXX)

INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
INSTALL(TARGETS MBVH DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

CONFIGURE_FILE(MBVHConfig.cmake.in ${CMAKE_CURRENT_SOURCE_DIR}/MBVHConfig.cmake @ONLY)

INSTALL(FILES MBVHConfig.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/cmake)
