

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)

CONFIGURE_FILE(test_files.h.in ${CMAKE_CURRENT_SOURCE_DIR}/test_files.h)

FOREACH(TEST_NAME IN LISTS TEST_FILES)
  ADD_EXECUTABLE(test_${TEST_NAME} test_${TEST_NAME}.cpp ${SRC_FILES})
ENDFOREACH()

# Tests that rely on MOAB
TARGET_LINK_LIBRARIES(test_moab_mesh ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_moab_old ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_MBVH ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_manager ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_filter_funcs ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_distant_rays ${MOAB_LIBRARIES} MBVH)
TARGET_LINK_LIBRARIES(test_closest_to_location ${MOAB_LIBRARIES} MBVH)

ADD_SUBDIRECTORY(test_files)
